--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 /* Custom Styles */
 *{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway';
   }
 .loading-spinner {
     border: 4px solid #f3f3f3;
